# waifu2x-converter-glsl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: filterGL.cpp  filterGL.h  main.cpp  modelHandlerFilterGL.cpp
